Fixed the gallery jumping issue/strange loading behaviour when switching between galleries.

--- a/app/components/gallery/animated-masonry-gallery.css
+++ b/app/components/gallery/animated-masonry-gallery.css
@@ -177,9 +177,9 @@
 #gallery-content-center img {
 	width: 384px;
 	margin-bottom: 2px;
-	-webkit-transition: all 0.5s;
+/*	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
 	-o-transition: all 0.5s;
-	transition: all 0.5s;
+	transition: all 0.5s;*/
 	margin-left: 2px;
 }
